--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,8 +2,8 @@
   <div class="panel-header">
     <p><strong><%= comment.commenter %></strong> on <%= comment.created_at.strftime("%B %-d, %Y") %></p>
     <small>
-      <%= link_to [comment.discussion, comment], method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete' do %>
-        <%= inline_svg('close.svg') %>
+      <%= link_to [comment.thing, comment], method: :delete, data: { confirm: "Are you sure?" }, class: "delete" do %>
+        <%= inline_svg("close.svg") %>
       <% end %>
     </small>
   </div>
