--- a/app/assets/stylesheets/modules/forms.scss
+++ b/app/assets/stylesheets/modules/forms.scss
@@ -11,9 +11,9 @@ input[type="checkbox"], input[type="checkbox"] + label {
 
 .text-input {
   @extend .text;
-  @extend %rounded;
   -webkit-appearance: none;
   border: $border;
+  border-radius: $radius;
   color: $grey;
   margin-bottom: 8px;
   outline: 0;
