--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,8 +1,7 @@
 <nav class="nav" role="navigation">
   <div>
     <%= link_to "Home", root_url, class: "nav-link" %>
-    <%= link_to "Discussions", discussions_path, class: "nav-link" %>
+    <%= link_to "Things", things_path, class: "nav-link" + nav_active_class(:things) %>
   </div>
-  <div>
-  </div>
+  <div></div>
 </nav>
