--- a/app/assets/stylesheets/modules/forms.scss
+++ b/app/assets/stylesheets/modules/forms.scss
@@ -40,15 +40,17 @@ textarea.text-input {
   }
 }
 
+.invisible-input {
+  background: transparent;
+  border: 0;
+  resize: none;
+  padding: 0;
+}
+
 @media (max-width: $screen-phone) {
   .text-input {
     width: 95% !important;
   }
-}
-
-.radio label {
-  line-height: 1.42;
-  text-transform: none;
 }
 
 .field_with_errors .text-input {
