--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -1,23 +1,19 @@
-<%= stylesheet_link_tag "documents" %>
-<%= javascript_include_tag "documents" %>
+<%= stylesheet_link_tag 'documents' %>
+<%= javascript_include_tag 'documents' %>
 
-<%= form_for(@document, remote: true, html: { id: "documentEditor" }) do |f| %>
-  <%= f.text_area :content, class: "text-input full-width invisible-input text-dark js-auto-size", placeholder: "Start writing! Markdown supported." %>
+<%= form_for(@document, remote: true, 'data-behavior': 'document_editor') do |f| %>
+  <%= f.text_area :content, class: 'text-input full-width invisible-input text-dark', placeholder: 'Start writing! Markdown supported.', 'data-behavior': 'auto_size document_editor_content' %>
 <% end %>
 
-<div id="editInfoModal" role="dialog" class="modal">
-  <a class="modal-close float-right" href="#">
-    <%= inline_svg("close.svg") %>
-  </a>
-  <h2>Name Your Document</h2>
-  <hr>
+<section id="edit" role="dialog" class="modal">
+  <%= modal_header 'Rename document' %>
   <%= form_for(@document) do |f| %>
-  <%= f.text_field :name, class: "text-input", placeholder: "Name the Document" %>
-  <%= f.submit "Save", class: "btn float-right" %>
+    <%= f.text_field :name, class: 'text-input', placeholder: 'Name the Document' %>
+    <%= f.submit 'Save', class: 'btn float-right' %>
   <% end %>
-</div>
+</section>
 
-<a class="btn-paper-mini" id="editInfoTrigger" name="editInfoModal" href="#editInfoModal">
+<a class="btn-paper-mini" data-behavior="modal_trigger" href="#edit">
   <%= inline_svg("info_outline.svg") %>
 </a>
 <%= link_to document_path(@document.id), class: "btn-paper" do %>
