--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Documents</h1>
 
-<%= render partial: "document", collection: @documents, cache: true %>
+<%= render partial: 'document', collection: @documents, cache: true %>
 
-<%= link_to new_document_path, class: "btn-paper" do %>
-  <%= inline_svg("add.svg") %>
+<%= link_to new_document_path, class: 'btn-paper' do %>
+  <%= inline_svg('add.svg') %>
 <% end %>
