--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,12 +1,12 @@
-<div class="document">
+<article class="document">
   <% unless @document.name.blank? %>
   <h1><%= @document.name %></h1>
   <% end %>
   <div class="text">
     <p class="m0 text-muted"><%= @document.content_html.html_safe %></p>
   </div>
-</div>
+</article>
 
 <%= link_to edit_document_path(@document), class: "btn-paper" do %>
-  <%= inline_svg("edit.svg") %>
+  <%= inline_svg 'edit.svg' %>
 <% end %>
