--- a/app/views/things/_form.html.erb
+++ b/app/views/things/_form.html.erb
@@ -1,25 +1,24 @@
 <%= form_for(@thing) do |f| %>
-<% if @thing.errors.any? %>
-<div class="panel">
-  <h2><%= pluralize(@thing.errors.count, "error") %> prohibited this thing from being saved:</h2>
-  <ul>
-    <% @thing.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
+  <% if @thing.errors.any? %>
+    <section class="panel">
+      <h2><%= pluralize(@thing.errors.count, 'error') %> prohibited this thing from being saved:</h2>
+      <ul>
+        <% @thing.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+    </section>
+  <% end %>
 
-<%= f.label :name %>
-<%= f.text_field :name, class: "text-input" %>
+  <%= f.label :name %>
+  <%= f.text_field :name, class: 'text-input' %>
 
-<div>
-  <%= f.check_box :pinned %>
-  <%= f.label :pinned, "Pinned" %>
-</div>
+  <div>
+    <%= f.check_box :pinned %>
+    <%= f.label :pinned, 'Pinned' %>
+  </div>
 
-<br>
+  <br>
 
-<%= f.submit class: "btn" %>
-
+  <%= f.submit class: 'btn' %>
 <% end %>
