--- a/app/views/things/_thing.html.erb
+++ b/app/views/things/_thing.html.erb
@@ -1,13 +1,12 @@
 <%= link_to thing do %>
-<div class="panel panel-body">
-  <% if thing.pinned? %>
-  <div class="pinned-large">
-    <%= inline_svg("pin.svg") %>
-  </div>
-  <% end %>
-  <div>
-    <h2><%= thing.name %></h2>
-    <p class="m0 text-muted"><%= pluralize(thing.comments.count, "comment") %> <%= " | Pinned" if thing.pinned? %></p>
-  </div>
-</div>
+  <section class="panel panel-body">
+    <%= inline_svg 'pin.svg', class: 'pinned-large' if thing.pinned? %>
+    <article>
+      <h2><%= thing.name %></h2>
+      <p class="m0 text-muted">
+        <%= pluralize thing.comments.count, 'comment' %>
+        <%= '· Pinned' if thing.pinned? %>
+      </p>
+    </article>
+  </section>
 <% end %>
