--- a/app/views/things/show.html.erb
+++ b/app/views/things/show.html.erb
@@ -1,13 +1,8 @@
-<% if @thing.pinned? %>
-<div class="pinned-large">
-  <%= inline_svg("pin.svg") %>
-</div>
-<% end %>
+<%= inline_svg 'pin.svg', class: 'pinned-large' if @thing.pinned? %>
 <h1 class="m1-btm ib"><%= @thing.name %></h1>
-<%= link_to "Edit", edit_thing_path(@thing), class: "btn btn-sm float-right" %>
+<%= link_to 'Edit', edit_thing_path(@thing), class: 'btn btn-sm float-right' %>
 
-<%= render @thing.comments.order(created_at: :asc) %>
+<%= render_comments %>
 
 <h2>Comment:</h2>
 <%= render "comments/form" %>
-</div>
